# OA_App

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.in  setup.cfg  setup_win64.ps1
conf/base/: catalog.yml  globals.yml  logging.yml
notebooks/: template_notebook.py
scripts/: run_kedro
src/application/: cli.py  config.py  pipeline_registry.py  settings.py
src/application/etl/: intermediate.py  runtime_checks.py
src/application/spi/: azure.py
src/application/spi/kedro/: hooks.py
src/tests/application/etl/: intermediate_test.py
