[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.kedro]
package_name = "application"
project_name = "application"
project_version = "0.18.4"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.jupytext]
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest]
python_files = '*_test.py'
python_classes = '*Test'
python_functions = 'test_* *_test'
addopts = '--doctest-modules'
junit_family = 'xunit2'
